--- a/index.html
+++ b/index.html
@@ -154,21 +154,25 @@
                 </p>
 
                 <div class="max-w-2xl mx-auto text-left">
-                    <pre class="directive-block bg-[#0A111A] border-2 border-[#FF8C00]/50 rounded-lg p-6 shadow-lg"
-                         style="box-shadow: 0 0 20px rgba(255, 140, 0, 0.4);">
+                    <pre class="directive-block bg-[#0A111A] border-2 border-[#FF8C00]/50 rounded-lg p-6 shadow-lg">
 <code class="text-gray-300">
 <span class="text-[#00F0FF]">> SYNTHESIST_DIRECTIVE:</span>
 
 <span class="text-white">> Goal:</span> Draft research outline for "Project: Aurora".
 
-<span class="text-[#FF8C00]">> Reason:</span> User needs to synthesize notes on "Quantum Biology" and "Neural Interface Design".
+<span class="text-[#FF8C00]">> Reason:</span> User needs to synthesize notes on
+<span class="text-[#FF8C00]">>         </span> "Quantum Biology" & "Neural Interface Design".
 <span class="text-[#FF8C00]">> Plan:</span>
 <span class="text-gray-400">>  1. </span> <span class="text-white">find_topic(</span>"Quantum Biology"<span class="text-white">)</span>
 <span class="text-gray-400">>  2. </span> <span class="text-white">find_topic(</span>"Neural Interface Design"<span class="text-white">)</span>
-<span class="text-gray-400">>  3. </span> <span class="text-white">query_knowledge_graph(</span>topic1, topic2, "find_overlapping_concepts"<span class="text-white">)</span>
-<span class="text-gray-400">>  4. </span> <span class="text-white">read_documents(</span>concept_matches<span class="text-white">)</span>
+<span class="text-gray-400">>  3. </span> <span class="text-white">query_graph(</span>
+<span class="text-gray-400">>        </span>   topic1,
+<span class="text-gray-400">>        </span>   topic2,
+<span class="text-gray-400">>        </span>   "find_overlaps"
+<span class="text-gray-400">>     </span> <span class="text-white">)</span>
+<span class="text-gray-400">>  4. </span> <span class="text-white">read_docs(</span>concept_matches<span class="text-white">)</span>
 <span class="text-gray-400">>  5. </span> <span class="text-white">generate_synthesis(</span>outline_format<span class="text-white">)</span>
-<span class="text-gray-400">>  6. </span> <span class="text-white">create_document(</span>"Project_Aurora_Outline.md"<span class="text-white">)</span>
+<span class="text-gray-400">>  6. </span> <span class="text-white">create_doc(</span>"Project_Aurora_Outline.md"<span class="text-white">)</span>
 
 <span class="text-[#00F0FF]">> STATUS: Synthesizing...</span>
 </code>
